--- a/views/menu.html
+++ b/views/menu.html
@@ -42,7 +42,7 @@
     </header>
 
     <div class="container">
-        <h2 class="text" style="margin-bottom: 30px;">Produtos</h2>
+        <h2 class="text" style="margin-bottom: 30px; margin-left: 60px;">Produtos</h2>
         <div class="d-flex justify-content-center">
             <table id="productsTable" class="table table-striped table-hover">
                 <thead class="table-header-center">
@@ -62,49 +62,52 @@
 
 
 
-<div class="modal fade" id="editProductModal" tabindex="-1" aria-labelledby="editProductModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="editProductModalLabel">Editar Produto</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="modal fade" id="editProductModal" tabindex="-1" aria-labelledby="editProductModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editProductModalLabel">Editar Produto</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="editProductForm">
+                        <div class="mb-3">
+                            <label for="editProductName" class="form-label">Nome do Produto <span id="nomeProdutoObrigatorio" style="color: red;">*</span></label>
+                            <input type="text" class="form-control" id="editProductName" name="nmProduto">
+                        </div>
+                        <div class="mb-3">
+                            <label for="editProductDescription" class="form-label">Descrição do Produto <span id="descProdutoObrigatorio" style="color: red;">*</span></label>
+                            <textarea class="form-control" id="editProductDescription" name="descProduto"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editProductPrice" class="form-label">Preço <span id="precoProdutoObrigatorio" style="color: red;">*</span></label>
+                            <input type="text" inputmode="numeric" pattern="[0-9]*\.?[0-9]*" class="form-control" id="editProductPrice" name="preco">
+                        </div>
+                        <div class="mb-3">
+                            <label for="editProductQuantity" class="form-label">Quantidade <span id="quantidadeProdutoObrigatorio" style="color: red;">*</span></label>
+                            <input type="text" inputmode="numeric" pattern="[0-9]*\.?[0-9]*" class="form-control" id="editProductQuantity" name="quantidade">
+                        </div>
+                        <input type="hidden" id="editProductId" name="cdProduto">
+                        <button type="submit" class="btn btn-primary">Salvar mudanças</button>
+                        <p id=""></p>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="modal-body">
-          <form id="editProductForm">
-            <div class="mb-3">
-              <label for="editProductName" class="form-label">Nome do Produto</label>
-              <input type="text" class="form-control" id="editProductName" name="nmProduto">
-            </div>
-            <div class="mb-3">
-              <label for="editProductDescription" class="form-label">Descrição do Produto</label>
-              <textarea class="form-control" id="editProductDescription" name="descProduto"></textarea>
-            </div>
-            <div class="mb-3">
-              <label for="editProductPrice" class="form-label">Preço</label>
-              <input type="number" step="0.01" class="form-control" id="editProductPrice" name="preco">
-            </div>
-            <div class="mb-3">
-              <label for="editProductQuantity" class="form-label">Quantidade</label>
-              <input type="number" class="form-control" id="editProductQuantity" name="quantidade">
-            </div>
-            <input type="hidden" id="editProductId" name="cdProduto">
-            <button type="submit" class="btn btn-primary">Salvar mudanças</button>
-          </form>
-        </div>
-      </div>
     </div>
-  </div>
-  
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script src="https://kit.fontawesome.com/4327c32687.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+    
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+<script src="https://kit.fontawesome.com/4327c32687.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 
     
     <script>
-      $(document).ready(function() {
+
+
+        $(document).ready(function() {
           let table = $('#productsTable').DataTable({
               "ajax": {
                   "url": "../php/busca_produtos.php",
@@ -328,32 +331,73 @@
 
         $('#editProductForm').on('submit', function(event) {
             event.preventDefault();
-            
-            $.ajax({
-                type: 'POST',
-                url: '../php/editar_produtos.php',
-                data: $(this).serialize(),
-                success: function(response) {
-                    if (response.trim() === 'success') {
-                        $('#editProductModal').modal('hide');
-                        $('#productsTable').DataTable().ajax.reload(null, false);
-                    } else {
+
+            let erro = false;
+
+            if ($('#editProductName').val() === '') {
+                erro = true;
+                $('#nomeProdutoObrigatorio').text('*Campo obrigatório*');
+            } else {
+                $('#nomeProdutoObrigatorio').text('');
+            }
+
+            if ($('#editProductDescription').val() === '') {
+                erro = true;
+                $('#descProdutoObrigatorio').text('*Campo obrigatório*');
+            } else {
+                $('#descProdutoObrigatorio').text('');
+            }
+
+            if ($('#editProductPrice').val() === '') {
+                erro = true;
+                $('#precoProdutoObrigatorio').text('*Campo obrigatório*');
+            } else {
+                $('#precoProdutoObrigatorio').text('');
+                if($('#editProductPrice').val() < 0){
+                    $('#precoProdutoObrigatorio').text('*Valor incorreto*');
+
+                }
+            }
+
+            if ($('#editProductQuantity').val() === '') {
+                erro = true;
+                $('#quantidadeProdutoObrigatorio').text('*Campo obrigatório*');
+            } else {
+                $('#quantidadeProdutoObrigatorio').text('');
+
+                if($('#editProductQuantity').val() < 0)
+                    $('#quantidadeProdutoObrigatorio').text('Valor incorreto');
+            }
+
+            if (!erro) {
+                $.ajax({
+                    type: 'POST',
+                    url: '../php/editar_produtos.php',
+                    data: $(this).serialize(),
+                    success: function(response) {
+                        if (response.trim() === 'success') {
+                            $('#editProductModal').modal('hide');
+                            $('#productsTable').DataTable().ajax.reload(null, false);
+                        } else {
+                            Swal.fire({
+                                html: "<h5 style='color:black; text-align: center;'>Houve um erro ao alterar os dados do produto: " + response + "</h5>",
+                                background: "#fff",
+                                icon: "error"
+                            });
+                        }
+                    },
+                    error: function() {
                         Swal.fire({
-                            html: "<h5 style='color:black; text-align: center;'>Houve um erro ao alterar os dados do produto: " + response + "</h5>",
+                            html: "<h5 style='color:black; text-align: center;'>Houve um erro ao alterar os dados do produto.</h5>",
                             background: "#fff",
                             icon: "error"
                         });
                     }
-                },
-                error: function() {
-                    Swal.fire({
-                        html: "<h5 style='color:black; text-align: center;'>Houve um erro ao alterar os dados do produto.</h5>",
-                        background: "#fff",
-                        icon: "error"
-                    });
-                }
-            });
+                });
+            }
         });
+
+    
 
 
     </script>
